[gd_scene load_steps=17 format=3 uid="uid://bw1onr5q2wwqh"]

[ext_resource type="Script" path="res://Enemies/Soldier/soldier.gd" id="1_axw6x"]
[ext_resource type="Texture2D" uid="uid://bmdmo1wfbdrc3" path="res://Enemies/Soldier/soldier.png" id="2_odfs7"]
[ext_resource type="Texture2D" uid="uid://clkyyndu0l6bg" path="res://Player/muzzle-flash.png" id="3_lxtif"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qsxqi"]
atlas = ExtResource("3_lxtif")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cyi6"]
atlas = ExtResource("3_lxtif")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_e7u2n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsxqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cyi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsxqi")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s184j"]
size = Vector2(20, 37)

[sub_resource type="Animation" id="Animation_nw42y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_bxi7q"]
resource_name = "crouching_shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"handle_shoot_crouch"
}]
}

[sub_resource type="Animation" id="Animation_idtyt"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_prcnr"]
resource_name = "standing_shoot"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"handle_shoot"
}]
}

[sub_resource type="Animation" id="Animation_hbmew"]
resource_name = "throw"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.8, 0.9, 1, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"handle_throw"
}]
}

[sub_resource type="Animation" id="Animation_wts2j"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jfm7k"]
_data = {
"RESET": SubResource("Animation_nw42y"),
"crouching_shoot": SubResource("Animation_bxi7q"),
"jump": SubResource("Animation_idtyt"),
"run": SubResource("Animation_wts2j"),
"standing_shoot": SubResource("Animation_prcnr"),
"throw": SubResource("Animation_hbmew")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wj44e"]
size = Vector2(25, 49.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pq4iv"]
size = Vector2(14, 39)

[node name="Soldier" type="CharacterBody2D"]
z_index = 2
collision_layer = 0
script = ExtResource("1_axw6x")

[node name="SpriteHolder" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SpriteHolder"]
texture = ExtResource("2_odfs7")
hframes = 19
frame = 1

[node name="MuzzleFlash" type="AnimatedSprite2D" parent="SpriteHolder"]
position = Vector2(26, -8)
sprite_frames = SubResource("SpriteFrames_e7u2n")

[node name="MuzzleFlashCrouch" type="AnimatedSprite2D" parent="SpriteHolder"]
position = Vector2(26, 0)
sprite_frames = SubResource("SpriteFrames_e7u2n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11.5)
shape = SubResource("RectangleShape2D_s184j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "crouching_shoot"
libraries = {
"": SubResource("AnimationLibrary_jfm7k")
}

[node name="HurtArea" type="Area2D" parent="."]
position = Vector2(1, 30)
collision_layer = 4
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2(0, -24.25)
shape = SubResource("RectangleShape2D_wj44e")
debug_color = Color(0.929412, 0, 0.662745, 0.419608)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_pq4iv")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
